@@ -1,3 +1,7 @@
+2009-08-29
+- merge change described in issue 122 (by jackp)
+  made right click easier
+
 2009-08-28
 - add some HSB config
 
